핵심프로젝트 최종 커밋

--- a/smhrdproject/src/main/webapp/srctest.html
+++ b/smhrdproject/src/main/webapp/srctest.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="../../../../../../Untitled Folder 1/static/uploads/janghansang.jpg">
+    <img src="../webapp/images/">
 </body>
 </html>
